Bug 99301 - Printing Handouts Ignores Selected Order
Summary: Printing Handouts Ignores Selected Order
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Daniel Silva
URL:
Whiteboard: target:6.1.0
Keywords:
: 103490 112014 119318 (view as bug list)
Depends on:
Blocks: Print-Dialog Handout-View
  Show dependency treegraph
 
Reported: 2016-04-14 15:49 UTC by Daniel Collins
Modified: 2018-09-20 08:16 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document on which it is possible to reproduce the issue (558.45 KB, application/vnd.oasis.opendocument.presentation)
2017-08-11 13:24 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Collins 2016-04-14 15:49:40 UTC
Trying to print a 28-page Impress slideshow as a Handout: File > Print > Document (Handout). While the default Order is "Left to right, then down", the preview pane instead shows the slides in order top-down-then-right. If I change the selection to "Top to bottom, then right", then no change occurs to the preview. Confirmed by printing to an XPS file and then viewing that the slide order is indeed the same with either setting (cannot print in preferred format left-to-right-then-down).
Comment 1 Buovjaga 2016-04-26 09:44:12 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.2.0.0.alpha1+
Build ID: d848960a3e77a8608a48f3ba394928c955f1e2d9
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-04-25_06:03:51
Locale: fi-FI (fi_FI)

LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 2 irik77587 2016-09-12 07:11:47 UTC
Print>Page_Layout>Order

SLIDE PER PAGE IS 2.NO MATTER WHAT OPTION IS CHOSEN PREVIEW SHOWS DEFAULT ORDER. SLIDES RUN OUT OF PAGE EVEN IF FIT TO PAGE IS SELECTED.

SLIDE PER PAGE IS 4 or more. SPACING IN PAGE IS NOT exactly as on slide.
Comment 3 Bartosz 2017-08-11 13:19:29 UTC
Could you please attach the example file on which I could reproduce that issue?
Comment 4 Bartosz 2017-08-11 13:24:51 UTC
Created attachment 135470 [details]
Example document on which it is possible to reproduce the issue
Comment 5 Daniel Collins 2017-08-14 03:08:16 UTC
FYI, it's not dependent on any file. The slides order-selection is entirely nonfunctional when printing any document I've worked on to date.
Comment 6 eisa01 2017-08-27 20:05:31 UTC
*** Bug 103490 has been marked as a duplicate of this bug. ***
Comment 7 eisa01 2017-08-27 20:06:26 UTC
*** Bug 112014 has been marked as a duplicate of this bug. ***
Comment 8 eisa01 2017-08-27 20:11:50 UTC
This was also an issue on Mac, I was able to replicate bug 112014. Bug 40325 was apparently highly related

Inherited from OOo according to bug 103490 that describe the same issue

Version: 5.4.0.3
Build ID: 7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 2; OS: Mac OS X 10.12.6; UI render: default; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 9 Commit Notification 2018-05-06 22:30:08 UTC
Daniel committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a8ae73b4c23ec80f97bcafd8b9a5e8f14b2abc7

tdf#99301 fix handouts selected order

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2018-09-20 08:16:52 UTC
*** Bug 119318 has been marked as a duplicate of this bug. ***