tdf#99301 fix handouts selected order

Change-Id: I757d41a4ec2ce832b16243e9d9c6fbd5fba6add6